WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
279600
[Writing Tools] Text underneath replaced range does not animate smoothly
https://bugs.webkit.org/show_bug.cgi?id=279600
Summary
[Writing Tools] Text underneath replaced range does not animate smoothly
Aditya Keerthi
Reported
2024-09-12 09:47:50 PDT
rdar://135741279
Attachments
Add attachment
proposed patch, testcase, etc.
Aditya Keerthi
Comment 1
2024-09-12 10:08:02 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/33555
EWS
Comment 2
2024-09-16 14:28:02 PDT
Committed
283725@main
(addeb52fffc6): <
https://commits.webkit.org/283725@main
> Reviewed commits have been landed. Closing PR #33555 and removing active labels.
EWS
Comment 3
2024-09-17 19:20:35 PDT
Committed
280938.347@safari-7619-branch
(769f3e2d397c): <
https://commits.webkit.org/280938.347@safari-7619-branch
> Reviewed commits have been landed. Closing PR #1803 and removing active labels.
EWS
Comment 4
2024-09-19 07:32:16 PDT
Committed
283286.91@safari-7620-branch
(37740b2fd40d): <
https://commits.webkit.org/283286.91@safari-7620-branch
> Reviewed commits have been landed. Closing PR #1807 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug